package.json fixed

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "index.js",
   "scripts": {
     "deploy": "gh-pages -d dist",
-    // "dev": "webpack --mode development",
-    // "build": "webpack --mode production",
-    // "start": "webpack-dev-server --mode development --open"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open"
   },
   "author": "Jonas",
   "license": "ISC",
